--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,11 @@ html, body{
     border-top: 1px solid black;
 }
 
+.needsConfirmation{
+    background: #dc3545;
+    font-weight: bold;
+}
+
 .orderDetailsLabel{
     text-align: right;
 }
