--- a/src/App.css
+++ b/src/App.css
@@ -9,15 +9,31 @@ html, body, .navbar{
     padding: 0 !important;
     color: #fcd4d6;
 }
+.navbar-brand{
+    font-family: 'sacramento';
+    font-size: 2.5rem;
+    padding: 0;
+}
 .myContainer{
-    height: 95%;
+    height: 90%;
+}
+
+.ps__thumb-y, .ps__rail-y:hover > .ps__thumb-y, .ps__rail-y:focus >
+.ps__thumb-y, .ps__rail-y.ps--clicking .ps_thumb-y{
+    background-color: #34414a !important;
+}
+
+.ps .ps__rail-x:hover, .ps .ps__rail-y:hover .ps .ps__rail-x:focus,
+.ps .ps__rail-y:focus, .ps .ps__rail-x.ps--clicking, .ps .ps__rail-y.ps--clicking{
+    background-color: transparent !important;
 }
 
 .orderContainer{
     border: 1px solid black;
     border-radius: 25px;
     display: inline-block;
-    background-color: #fff;
+    height: 100%;
+    background: linear-gradient(0deg, #9E9E9E, #ffffff);
 }
 
 .orderContainerHeader{
@@ -30,7 +46,7 @@ html, body, .navbar{
 
 .orderContainerItem{
     border: 1px solid black;
-    background-color: #fcd4d6;
+    background-color: #a1a1a1;
     border-radius: 20px;
     padding: 5px !important;
 
@@ -58,6 +74,10 @@ html, body, .navbar{
 
 .activeOrderContainerItem{
     background: rgba(81, 229, 253, 0.3803921568627451)
+}
+
+.employeesMainContainer{
+    background-color: white;
 }
 
 @media (max-width: 767.98px) {
