--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-html, body, #root, .dashboard{
+html, body, #root, .dashboard, .ordersMainContainer{
     height: 100%;
 }
 html, body, .navbar{
@@ -33,6 +33,13 @@ html, body, .navbar{
     border-radius: 25px;
     display: inline-block;
     height: 100%;
+    background: linear-gradient(0deg, #9E9E9E, #ffffff);
+}
+
+.orderContainerNoHeight{
+    border: 1px solid black;
+    border-radius: 25px;
+    display: inline-block;
     background: linear-gradient(0deg, #9E9E9E, #ffffff);
 }
 
@@ -77,7 +84,11 @@ html, body, .navbar{
 }
 
 .employeesMainContainer{
-    background-color: white;
+    height: 100%;
+}
+
+.employeesItem{
+
 }
 
 @media (max-width: 767.98px) {
