--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,36 @@ html, body, .navbar{
     background-color: #323c4e;
 }
 
+
+.orderContainerItem{
+    margin-bottom: .25rem !important;
+    background: #c8deff;
+    /* background: #b1bccd; */
+    border-radius: 20px;
+    padding: 5px !important;
+    color: #171c24;
+}
+
+.orderItemLabel{
+    font-weight: 400;
+}
+
+.orderItemText{
+
+    font-weight: 600;
+}
+
+.orderItemDescription{
+    font-weight: 800;
+}
+
+.orderAmount{
+    font-weight: 600;
+    text-decoration: underline;
+    color: green;
+    font-style: italic;
+}
+
 .ordersSubContainer{
     margin-left: 0 !important;
     margin-right: 0 !important;
@@ -69,18 +99,8 @@ html, body, .navbar{
     font-size: 2rem;
 }
 
-
-.orderContainerItem{
-    margin-bottom: .25rem !important;
-    background: #b1bccd;
-    border-radius: 20px;
-    padding: 5px !important;
-    color: #171c24;
-    font-weight: 500;
-}
-
 .orderDetailsItem{
-    background: #b1bccd;
+    background: #d7e6fd;
     margin-bottom: 1rem !important;
 }
 .needsConfirmation{
@@ -104,7 +124,8 @@ html, body, .navbar{
 }
 
 .activeOrderContainerItem{
-    background: rgba(81, 229, 253, 0.3803921568627451)
+    background: #fff;
+    border: 4px solid #007bff;
 }
 
 .employeesMainContainer{
